--- a/templates/addDiag.html
+++ b/templates/addDiag.html
@@ -128,6 +128,28 @@
             background-color: #2471a3; /* Even darker blue on click */
             transform: translateY(1px);
         }
+        .sbtn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            font-size: 16px;
+            font-weight: bold;
+            border-radius: 5px;
+            cursor: pointer;
+            text-align: center;
+            border: none;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            user-select: none;
+          }
+        
+          .sbtn:hover {
+            background-color: #0056b3;
+          }
+        
+          .sbtn:active {
+            transform: scale(0.95);
+          }
     </style>
 </head>
 
