--- a/templates/diaglogin.html
+++ b/templates/diaglogin.html
@@ -260,6 +260,7 @@
                         </div>
                     </div>
                     <input type="submit" class="btn" value="Login">
+                    <a href="/setDpswd" >change password</a>
                 </form>
             </div>
         </div>
