--- a/templates/home.html
+++ b/templates/home.html
@@ -280,7 +280,7 @@
             <ul id="navbar" class="mainright">
                 <li><a href="{% url 'hospitallogin' %}"><b>Hospitals</b></a></li>
                 <li><a href="{% url 'diaglogin' %}"><b>Diagnosis Centers</b></a></li>
-                <li><a href=""><b>Home</b></a></li>
+                <!-- <li><a href=""><b>Home</b></a></li> -->
                 <li><a href="{%url 'nearby'%}"><b>nearby</b></a></li>
                 <li><a href="{% url 'patientloginregister' %}"><b>Patient</b></a></li>
                 <li><a href="{% url 'adminlogin' %}"><b>Admin</b></a></li>
