--- a/templates/addHospital.html
+++ b/templates/addHospital.html
@@ -119,6 +119,28 @@
             .dd {
                 align-items: center;
             }
+            .sbtn {
+                display: inline-block;
+                padding: 10px 20px;
+                background-color: #007bff;
+                color: white;
+                font-size: 16px;
+                font-weight: bold;
+                border-radius: 5px;
+                cursor: pointer;
+                text-align: center;
+                border: none;
+                transition: background-color 0.3s ease, transform 0.2s ease;
+                user-select: none;
+              }
+            
+              .sbtn:hover {
+                background-color: #0056b3;
+              }
+            
+              .sbtn:active {
+                transform: scale(0.95);
+              }
         </style>
     </head>
 
@@ -160,7 +182,7 @@
 
             <label for="speciality">Speciality:</label><br>
             <input type="text" id="speciality" name="speciality" required><br><br>
-            <div onclick="validate()"> Submit</div>
+            <div class="sbtn" onclick="validate()"> Submit</div>
 
             <!-- <input type="submit" value="Submit"> -->
         </form>
