--- a/templates/hospitalLogin.html
+++ b/templates/hospitalLogin.html
@@ -255,11 +255,13 @@
                             <i class="fas fa-lock"></i>
                         </div>
                         <div class="div">
-                            <h5>Passowrd</h5>
+                            <h5>Password</h5>
                             <input type="password" class="input" name="hpswd">
                         </div>
+                        
                     </div>
                     <input type="submit" class="btn" value="Login">
+                    <a href="/setHpswd" >change password</a>
                 </form>
             </div>
         </div>
