--- a/templates/patientlogin.html
+++ b/templates/patientlogin.html
@@ -255,7 +255,7 @@
                             <i class="fas fa-lock"></i>
                         </div>
                         <div class="div">
-                            <h5>Passowrd</h5>
+                            <h5>Password</h5>
                             <input type="password" class="input" name="ppswd">
                         </div>
                     </div>
