--- a/templates/uploadDetailsDiag.html
+++ b/templates/uploadDetailsDiag.html
@@ -83,7 +83,7 @@
 
                         <div class="form-group">
                             <input type="text" class="form-control input-bg" id="adhno" name="adhno"
-                                style="display: none;" value="{{adno}}">
+                                style="display: none;" value="{{adhno}}">
                         </div>
 
                         <div class="form-group">
